--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@nextui-org/dropdown": "^2.1.31",
     "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/theme": "^2.2.11",
+    "active-link-nextjs": "^0.1.7",
     "antd": "^5.21.6",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "nexios-http": "^1.1.21",
     "next": "15.0.2",
+    "next-auth": "^4.24.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
