--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@next/font": "^14.2.15",
     "@nextui-org/dropdown": "^2.1.31",
     "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/theme": "^2.2.11",
+    "@reduxjs/toolkit": "^2.3.0",
     "active-link-nextjs": "^0.1.7",
     "antd": "^5.21.6",
     "classnames": "^2.5.1",
@@ -22,7 +24,10 @@
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
