--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@reduxjs/toolkit": "^2.3.0",
     "active-link-nextjs": "^0.1.7",
     "antd": "^5.21.6",
+    "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "nexios-http": "^1.1.21",
     "next": "15.0.2",
     "next-auth": "^4.24.10",
