--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/theme": "^2.2.11",
     "@reduxjs/toolkit": "^2.3.0",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.9.0",
     "active-link-nextjs": "^0.1.7",
     "antd": "^5.21.6",
     "axios": "^1.7.7",
@@ -30,7 +32,8 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
-    "sonner": "^1.7.0"
+    "sonner": "^1.7.0",
+    "sweetalert2": "^11.14.4"
   },
   "devDependencies": {
     "@types/node": "^20",
