--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nexios-http": "^1.1.21",
     "next": "15.0.2",
     "next-auth": "^4.24.10",
+    "nextjs-toploader": "^3.7.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
