--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.0",
-    "sweetalert2": "^11.14.4"
+    "sweetalert2": "^11.14.4",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/node": "^20",
