--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.9.0",
     "antd": "^5.21.6",
+    "aos": "^2.3.4",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -36,6 +37,8 @@
     "swiper": "^11.1.15"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
